--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@ title: " "
 excerpt: "Writeup for my patches and other projects I worked on."
 author_profile: true
 header:
-    overlay_image: "https://img-assets.illusion0001.workers.dev/assets/images/banners/lis-butterfly-banner.png"
+    overlay_image: "https://drive.google.com/uc?id=1AF97X_dYqLCdDH1fPdveIGMYozKi66P_"
     overlay_filter: 0.5
 ---
